Use RuntimeExceptions for unexpected errors